--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.23.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
+    "socket.io-client": "^4.3.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/node": "^16.11.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.1",
